--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
   font_awesome_flutter: ^10.1.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
